tests/rosetta/out/C/chernicks-carmichael-numbers.error
cc: exit status 1
/tmp/chernicks-carmichael-numbers.c: In function ‘bigFromInt’:
/tmp/chernicks-carmichael-numbers.c:95:14: error: incompatible types when assigning to type ‘list_int’ from type ‘int’
   95 |     digits = 0;
      |              ^
/tmp/chernicks-carmichael-numbers.c: In function ‘bigMulSmall’:
/tmp/chernicks-carmichael-numbers.c:112:11: error: incompatible types when assigning to type ‘list_int’ from type ‘int’
  112 |     res = 0;
      |           ^
/tmp/chernicks-carmichael-numbers.c:117:11: error: incompatible types when assigning to type ‘list_int’ from type ‘int’
  117 |     res = 0;
      |           ^
/tmp/chernicks-carmichael-numbers.c: In function ‘ccNumbers’:
/tmp/chernicks-carmichael-numbers.c:187:30: error: invalid operands to binary + (have ‘char *’ and ‘char *’)
  187 |         printf("%d\n", tmp14 + bigToString(num));
      |                              ^ ~~~~~~~~~~~~~~~~
      |                                |
      |                                char *
